# Tevian_test

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: database.py  main.py  models.py  repository.py  schema.py  service.py  settings.py
