[project]
name = "tevia-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.2",
    "psycopg>=3.2.2",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.35",
    "starlette>=0.38.6",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "isort>=5.13.2",
]
